[metadata]
name = background-mediad
version = 1.0.0
author = Bradley Eaton
author_email = bradley@bradleyeaton.com
description = Uses the currently playing song through spotify/mpris to create a wallpaper.
license = BSD 3-Clause License
url = https://github.com/brad1111/background-fm
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: BSD 3-Clause License

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
